test/negative/506_duplicate_param.fx
// expect: duplicate identifier
fun f(a: int, a: int) = a
println(f(1, 2))
